@startuml
hide circle
skinparam linetype ortho

entity "User" as user {
  * id : UUID <<PK>>
  --
  email : VARCHAR
  password_hash : VARCHAR
  role : ENUM('user','student','admin')
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  deleted_at : TIMESTAMP NULL
}

entity "Course" as course {
  * id : UUID <<PK>>
  --
  title : VARCHAR
  description : TEXT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  deleted_at : TIMESTAMP NULL
}

entity "Enrollment" as enrollment {
  * id : UUID <<PK>>
  --
  user_id : UUID <<FK>>
  course_id : UUID <<FK>>
  enrolled_at : TIMESTAMP
  payment_status : ENUM('pending','paid','failed','refunded')
  progress : INTEGER
  completed_at : TIMESTAMP NULL
}

entity "Chapter" as chapter {
  * id : UUID <<PK>>
  --
  course_id : UUID <<FK>>
  parent_id : UUID <<FK, NULL>>
  title : VARCHAR
  position : INTEGER
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  deleted_at : TIMESTAMP NULL
}

entity "Content" as content {
  * id : UUID <<PK>>
  --
  chapter_id : UUID <<FK>>
  content_type : ENUM('heading','paragraph','video','image','file','list','code','quiz')
  body : TEXT / JSON NULL
  media_url : VARCHAR NULL
  position : INTEGER
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  deleted_at : TIMESTAMP NULL
}

entity "Workshop" as workshop {
  * id : UUID <<PK>>
  --
  title : VARCHAR
  description : TEXT
  start_date : TIMESTAMP
  end_date : TIMESTAMP
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
  deleted_at : TIMESTAMP NULL
}

entity "User_Workshop" as user_workshop {
  * id : UUID <<PK>>
  --
  user_id : UUID <<FK>>
  workshop_id : UUID <<FK>>
  registered_at : TIMESTAMP
  attended : BOOLEAN
}

user ||--o{ enrollment
course ||--o{ enrollment

course ||--o{ chapter
chapter ||--o{ chapter : parent_id
chapter ||--o{ content

user ||--o{ user_workshop
workshop ||--o{ user_workshop

@enduml